irrigation-systems subject changes

--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -15,14 +15,16 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-padding-top-2">
               <h1 class="govuk-fieldset__heading">
-                What systems are currently used to irrigate?
+                Will your irrigation system change? 
               </h1>
             </legend>
+          <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
+            What systems are currently used to irrigate?
             <span class="govuk-caption-m">Select one or two options</span>
             <br>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-systems-current-1" name="irrigation-systems-current" type="checkbox" value="Trickle" {{ checked("irrigation-systems-current", "Trickle") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-1">
@@ -72,62 +74,61 @@
                 </label>
               </div>
             </div>
+          </div>
           </fieldset>
         </div>
         <br>
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
+            <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
                 What systems will be used to irrigate?
-              </h1>
-            </legend>
-            <span class="govuk-caption-m">Select one or two options</span>
-            <br>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Trickle" {{ checked("irrigation-systems-target", "Trickle") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-1">
-                  Trickle
-                </label>
+               <span class="govuk-caption-m">Select one or two options</span>
+              <br>
+              <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Trickle" {{ checked("irrigation-systems-target", "Trickle") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-1">
+                    Trickle
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-target", "Boom irrigator") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
+                    Boom irrigator
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-3" name="irrigation-systems-target" type="checkbox" value="Ebb and flow" {{ checked("irrigation-systems-target", "Ebb and flow") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-3">
+                    Ebb and flow
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Capillary bed" {{ checked("irrigation-systems-target", "Capillary bed") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-4">
+                    Capillary bed
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-5" name="irrigation-systems-target" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-target", "Sprinklers") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-5">
+                    Sprinklers
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Mist" {{ checked("irrigation-systems-target", "Mist") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-6">
+                    Mist
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-7" name="irrigation-systems-target" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-target", "Rain gun") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-7">
+                    Rain gun
+                  </label>
+                </div>
               </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-target", "Boom irrigator") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
-                  Boom irrigator
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-3" name="irrigation-systems-target" type="checkbox" value="Ebb and flow" {{ checked("irrigation-systems-target", "Ebb and flow") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-3">
-                  Ebb and flow
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Capillary bed" {{ checked("irrigation-systems-target", "Capillary bed") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-4">
-                  Capillary bed
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-5" name="irrigation-systems-target" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-target", "Sprinklers") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-5">
-                  Sprinklers
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Mist" {{ checked("irrigation-systems-target", "Mist") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-6">
-                  Mist
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-7" name="irrigation-systems-target" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-target", "Rain gun") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-7">
-                  Rain gun
-                </label>
-              </div>
-            </div>
+            </div>  
           </fieldset>
         </div>
         <br>
