--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -46,17 +46,17 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Check if you’re eligible</th>
+      <td class="govuk-table__cell">Check if you’re eligible</td>
       <td class="govuk-table__cell govuk-!-padding-right-1">1 July 2021</td>
       <td class="govuk-table__cell">31 August 2021</td>
     </tr>
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Full application</th>
+      <td class="govuk-table__cell">Full application</td>
       <td class="govuk-table__cell">1 September 2021</td>
       <td class="govuk-table__cell">30 November 2021</td>
     </tr>
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Project completed and claims made</th>
+      <td class="govuk-table__cell">Project completed and claims made</td>
       <td class="govuk-table__cell"></td>
       <td class="govuk-table__cell">21 March 2022</td>
     </tr>
