commented out side bar - need confirmation

--- a/app/views/water/current/current-irrigating.html
+++ b/app/views/water/current/current-irrigating.html
@@ -51,7 +51,7 @@
         {% endif %}
       </form>
     </div>
-     <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+     {# <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
       <aside class="app-related-items">
           <h3 class="govuk-heading-m"> Funding  priorities </h3>
           <div class="govuk-body">
@@ -61,7 +61,7 @@
                    </ul>
           </div>
       </aside>    
-    </div>
+    </div> #}
   </div>
 </main>
 {% endblock %}
