--- a/app/views/current/views/water/--No-irrigation-systems.html
+++ b/app/views/current/views/water/--No-irrigation-systems.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="govuk-width-container">
-<mian class="govuk-main-wrapper">
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
