--- a/app/views/water/current/answers.html
+++ b/app/views/water/current/answers.html
@@ -155,7 +155,7 @@
         </td>
         <td class="govuk-table__cell">
           <br><br><br><br>
-          <a class="govuk-link" href="No-irrigated-land">
+          <a class="govuk-link" href="no-irrigated-land">
               Change<span class="govuk-visually-hidden"> current irrigated land</span>
           </a>
         </td>
@@ -228,7 +228,7 @@
         </td>
         <td class="govuk-table__cell">
           <br><br><br>
-          <a class="govuk-link" href="No-irrigation-water-source">
+          <a class="govuk-link" href="no-irrigation-water-source">
               Change<span class="govuk-visually-hidden"> projected irrigation water source</span>
           </a>
         </td>
@@ -303,7 +303,7 @@
         </td>
         <td class="govuk-table__cell">
           <br><br><br><br>
-          <a class="govuk-link" href="No-irrigation-water-source">
+          <a class="govuk-link" href="no-irrigation-water-source">
               Change<span class="govuk-visually-hidden"> projected irrigation systems</span>
           </a>
         </td>
