--- a/app/views/water/current/No-irrigation-water-source.html
+++ b/app/views/water/current/No-irrigation-water-source.html
@@ -18,58 +18,14 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will your water source change?
+                Where will the irrigation water come from?
               </h1>
             </legend>
-            <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-            Where does your current irrigation water come from?
-            <span class="govuk-hint">Select one or two options</span>
-            </div>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak flow" {{ checked("irrigation-current", "Peak flow") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-1">
-                  Peak-flow surface water
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-2" name="irrigation-current" type="checkbox" value="Bore hole" {{ checked("irrigation-current", "Bore hole") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-2">
-                  Bore hole/aquifer
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Rain water" {{ checked("irrigation-current", "Rain water") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-3">
-                  Rain water harvesting
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Surface abstraction" {{ checked("irrigation-current", "Surface abstraction") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-4">
-                  Summer water surface abstraction
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-5" name="irrigation-current" type="checkbox" value="mains" {{ checked("irrigation-current", "mains") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-5">
-                  Mains
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-6" name="irrigation-current" type="checkbox" value="Not currently irrigating" {{ checked("irrigation-current", "Not currently irrigating") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-6">
-                  Not currently irrigating
-                </label>
-              </div>
-            </div>
           </fieldset>
         </div>
-        <br>
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-          <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-             Where will the irrigation water come from?
+          <div class="govuk-body govuk-!-margin-bottom-0">
             <span class="govuk-hint">Select one or two options</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
@@ -118,7 +74,6 @@
             Back to summary page
           </button>
         {% endif %}
-
 
       </form>
   </div>
