--- a/app/views/water/current/irrigated-land.html
+++ b/app/views/water/current/irrigated-land.html
@@ -16,7 +16,7 @@
             <div class="govuk-form-group">
                <h1 class="govuk-label-wrapper govuk-!-padding-bottom-2">
                   <label class="govuk-label govuk-label--l" for="irrigated-land-current">
-                    Will the amount of irrigated land change? 
+                    Will the area of irrigated land change?
                   </label>
                 </h1>
                 <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-3">
