--- a/app/views/water/current/farming-type-fail.html
+++ b/app/views/water/current/farming-type-fail.html
@@ -10,13 +10,12 @@
 
 {% block content %}
 
-<div class="gov-body">
-  <div class="govuk-grid-row">
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
           This grant is only available to:   
         </h1>
-        <ul class="govuk-!-font-size-24">
+        <ul class="govuk-list govuk-list--bullet">
           <li>arable and horticultural farming businesses that supply the food industry</li>
           <li>nurseries growing flowers</li>
           <li>forestry nurseries</li>
