text changes different page

--- a/app/views/water/current/legal-status.html
+++ b/app/views/water/current/legal-status.html
@@ -17,7 +17,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of the farm business
+                What is the legal status of the farm business?
               </h1>
             </legend>
             <br><br>
@@ -61,7 +61,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
-                  Community interest organisation
+                  Community interest company  
                 </label>
               </div>
               <div class="govuk-radios__item">
