--- a/app/views/water/current/abstraction-required-condition.html
+++ b/app/views/water/current/abstraction-required-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="abstraction-licence">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
 
         <p>If you have already applied for an abstraction licence or variation but it might not be issued by then, please email <a href=""> FTF@rpa.gov.uk</a> </p>
 
-            <form class="form" action="water-SSSI" method="post">
+            <form class="form" action="{{ nextUrl }}" method="post">
 
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
