--- a/app/views/water/current/planning-required-condition.html
+++ b/app/views/water/current/planning-required-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-permission">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
       
         <p>Any planning permission must be in place by 31 December 2021 (the end of the application window).</p>
 
-            <form class="form" action="abstraction-licence" method="post">
+            <form class="form" action="{{ nextUrl }}" method="post">
 
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
