--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -9,14 +9,14 @@
 
 <h2 id="who-can-apply">Who can apply</h2>
 
-<p>You can apply if:</p>
+<p>You can apply if you:</p>
 <ul>
-  <li>you’re in England</li>
-  <li>you grow crops for the food industry</li>
-  <li>you’re a nursery growing flowers</li>
-  <li>you’re a forestry nursery</li>
-  <li>you own the land the project will be on or have a lease for at least 5 years</li>
-  <li>the estimated project costs are over £87,500</li>
+  <li>are in England</li>
+  <li>grow crops for the food industry</li>
+  <li>are a nursery growing flowers</li>
+  <li>are a forestry nursery</li>
+  <li>own the land the project will be on or have a lease for at least 5 years</li>
+  <li>estimate the project costs will be over £87,500</li>
 </ul>
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
@@ -53,7 +53,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Full application</td>
       <td class="govuk-table__cell">1 September 2021</td>
-      <td class="govuk-table__cell">30 November 2021</td>
+      <td class="govuk-table__cell">31 December 2021</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Project completed and claims made</td>
