--- a/app/views/water/current/applying.html
+++ b/app/views/water/current/applying.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="business">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form class="form" action="applying-answer" method="post">
+      <form class="form" action="{{ nextUrl }}" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
