--- a/app/views/water/current/business.html
+++ b/app/views/water/current/business.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="{{ nextUrl }}" method="post">
+      <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
 
         <h1 class="govuk-heading-l">
           Business details
@@ -64,14 +64,14 @@
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
-        {# <button>TEST</button> #}
-        {# {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+        
+        {% if data['DETAILS'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-!-margin-right-1 govuk" data-module="govuk-button"
           >
             Back to summary page
           </button>
-        {% endif %} #}
+        {% endif %}
       </form>
     </div>
   </div>
