--- a/app/views/water/current/check-details.html
+++ b/app/views/water/current/check-details.html
@@ -195,7 +195,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong> Contact datails</strong>
+                                <strong> Contact details</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 {{ data['farmer-email'] }}<br>
@@ -253,7 +253,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong> Contact datails</strong>
+                                <strong> Contact details</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 <p>{{ data['agent-email'] }}</p>
@@ -302,7 +302,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong> Contact datails</strong>
+                                <strong> Contact details</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 {{ data['agent-farmer-email'] }}<br>
