--- a/app/views/water/current/check-details.html
+++ b/app/views/water/current/check-details.html
@@ -185,7 +185,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong>Home address</strong>
+                                <strong>Address</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 {{ data['farmer-address1'] }}<br>
@@ -243,7 +243,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong>Home address</strong>
+                                <strong>Address</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 {{ data['agent-address1'] }}<br>
@@ -292,7 +292,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th  scope="row" class="govuk-table__header">
-                                <strong>Home address</strong>
+                                <strong>Address</strong>
                             </th>
                             <td class="govuk-table__cell">
                                 {{ data['agent-farmer-address1'] }}<br>
