--- a/app/views/water/current/business.html
+++ b/app/views/water/current/business.html
@@ -64,12 +64,12 @@
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
-        
+
         {% if data['DETAILS'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-!-margin-right-1 govuk" data-module="govuk-button"
           >
-            Back to summary page
+            Back to details page
           </button>
         {% endif %}
       </form>
