--- a/app/views/water/current/farmer-details.html
+++ b/app/views/water/current/farmer-details.html
@@ -97,7 +97,7 @@
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
           >
-            Back to summary page
+            Back to details page
           </button>
         {% endif %}
       </form>
