--- a/app/views/water/current/check-details.html
+++ b/app/views/water/current/check-details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-    <a class="govuk-back-link" href="farmer-details">Back</a>
+    <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -181,7 +181,7 @@
      </div>    
         <div class="govuk-grid-row govuk-!-padding-top-8">
             <div class="govuk-grid-column-two-thirds">
-                <form class="form" action="consent" method="post">  
+                <form class="form" action="{{ nextUrl }}" method="post">  
                     <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                         Continue
                     </button>
