--- a/app/views/water/v1/views/guidance.html
+++ b/app/views/water/v1/views/guidance.html
@@ -14,7 +14,7 @@
 
       <p>The CPSG offers are formally announced in a <a href="https://www.gov.uk/government/news/22-million-awarded-to-farmers-to-boost-productivity">Defra Press Release</a></p>
 
-      <p>You must accept your Grant Funding Agreement using the online <a rel="external" href="https://www.cpsmall.org.uk/acceptance_portal_intro/">CPSG acceptance portal</a>.</p>
+      <p>You must accept your Grant Funding Agreement using the online !<a rel="external" href="https://www.cpsmall.org.uk/acceptance_portal_intro/">CPSG acceptance portal</a>.</p>
     </div>
 
     <h2 id="countryside-productivity-scheme">Countryside Productivity Scheme</h2>
